# Fine-Tuning-MistralAI-

./: README.md  ft_mistral.ipynb  pyproject.toml
data_collection/: prompts_formatting.py  scrape.py  sports_headlines.txt  train.json
