[project]
name = "fine-tuning-a-llm-on-sports-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.1",
    "bs4>=0.0.2",
    "datasets>=3.6.0",
    "peft>=0.16.0",
    "requests>=2.32.4",
    "transformers>=4.53.1",
    "trl>=0.19.0",
]
